<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:padding="6dp">

            //textview(tvAsientos tvHoraSalida tvPrecio) EditText(tvCiudad)


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/textView"
                android:text="@string/nameTextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/textView3"
                android:text="@string/precios" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/textView4"
                android:text="@string/TxtViewAsiento2" />

            <TextView
                android:id="@+id/tvCiudad"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginTop="91dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvHoraSalida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginStart="12dp"
                android:layout_marginTop="97dp"
                android:layout_toEndOf="@+id/tvCiudad"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="22dp"
                android:layout_marginTop="98dp"
                android:layout_toEndOf="@+id/tvHoraSalida"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvAsiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_marginStart="29dp"
                android:layout_marginTop="96dp"
                android:layout_toEndOf="@+id/tvPrecio"
                android:text="TextView" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>